--- a/openaps.ini
+++ b/openaps.ini
@@ -177,8 +177,8 @@ extra = ns.ini
 rm-warmup = ! bash -c "rm -f model.json monitor/clock.json > /dev/null"
 warmup = report invoke model.json raw-pump/clock-raw.json monitor/clock.json
 fail-warmup = ! bash -c "echo PREFLIGHT FAIL; exit 1"
-preflight = ! bash -c "rm -f monitor/clock.json && openaps report invoke monitor/clock.json 2>/dev/null && grep -q T monitor/clock.json && echo PREFLIGHT OK || (mm-stick warmup || sudo oref0-reset-usb; echo PREFLIGHT FAIL; sleep 120; exit 1)"
-monitor-cgm = report invoke monitor/glucose.json monitor/glucoseclean.json
+preflight = ! bash -c "(echo PREFLIGHT ) && openaps warmup 2>&1 >/dev/null && grep -q T monitor/clock.json && echo PREFLIGHT OK || openaps fail-warmup"
+monitor-cgm = report invoke monitor/glucoseclean.json  raw-cgm/glucose-raw.json monitor/glucose.json
 monitor-pump-history = report invoke raw-pump/pump-history-raw.json monitor/pumphistory.json
 get-basal-status = report invoke monitor/temp-basal-status.json
 get-pump-details = report invoke monitor/reservoir.json monitor/status.json monitor/battery.json
@@ -192,7 +192,7 @@ ping = ! bash -c "echo PONG! $*" --
 pong = ! echo PONG
 hello = ! echo hello
 okbar = ! bash -c "echo $1" --
-report-nightscout = report invoke monitor/clock-zoned.json nightscout/preflight.json monitor/glucoseclean.json nightscout/uploaded.json  nightscout/uploaded-entries.json
+report-nightscout = report invoke nightscout/preflight.json nightscout/recent-treatments.json nightscout/uploaded.json nightscout/recent-missing-entries.json nightscout/uploaded-entries.json
 gather = ! bash -c "rm -f monitor/*; openaps get-profile && openaps monitor-cgm && openaps monitor-pump && openaps report invoke monitor/iob.json"
 get-profile = report invoke settings/settings.json settings/bg_targets_raw.json settings/bg-targets.json settings/insulin-sensitivities-raw.json settings/insulin-sensitivities.json settings/basal-profile.json settings/profile.json
 monitor-pump = report invoke monitor/clock.json monitor/temp_basal.json monitor/pumphistory.json monitor/iob.json
