--- a/openaps.ini
+++ b/openaps.ini
@@ -62,7 +62,7 @@ json_default = True
 oref0-profile = oref0-monitor/profile.json
 device = determine-basal
 remainder = 
-glucose = monitor/glucoseclean.json
+glucose = monitor/glucoseclean.json monitor/glucose.json
 
 [report "raw-pump/pump-history-raw.json"]
 hours = 8.0
