--- a/openaps.ini
+++ b/openaps.ini
@@ -207,7 +207,7 @@ use = shell
 reporter = JSON
 json_default = True
 device = ns
-remainder = monitor/pumphistory.json model.json
+remainder = monitor/pump-history.json model.json
 
 [report "nightscout/uploaded.json"]
 oper = upload-non-empty-treatments
@@ -223,7 +223,7 @@ use = shell
 reporter = JSON
 json_default = True
 device = ns
-remainder = tz  monitor/glucose.json
+remainder = tz  monitor/glucoseclean.json monitor/glucose.json
 
 [report "nightscout/uploaded-entries.json"]
 oper = upload
