openaps-report invoke model.json raw-pump/clock-raw.json monitor/clock.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report invoke model.json raw-pump/clock-raw.json monitor/clock.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -223,7 +223,7 @@ use = shell
 reporter = JSON
 json_default = True
 device = ns
-remainder = tz  monitor/glucoseclean.json monitor/glucose.json
+remainder = tz  monitor/glucose.json monitor/glucoseclean.json 
 
 [report "nightscout/uploaded-entries.json"]
 oper = upload
