openaps-use tz rezone --astimezone --date dateString -
      TODO: better change descriptions
      /usr/local/bin/openaps-use tz rezone --astimezone --date dateString -

--- a/openaps.ini
+++ b/openaps.ini
@@ -223,7 +223,7 @@ use = shell
 reporter = JSON
 json_default = True
 device = ns
-remainder = tz  monitor/glucose.json monitor/glucoseclean.json 
+remainder = tz  entries monitor/glucoseclean.json 
 
 [report "nightscout/uploaded-entries.json"]
 oper = upload
