--- a/openaps.ini
+++ b/openaps.ini
@@ -62,7 +62,7 @@ json_default = True
 oref0-profile = oref0-monitor/profile.json
 device = determine-basal
 remainder = 
-glucose = monitor/glucoseclean.json monitor/glucose.json
+glucose = monitor/glucose.json
 
 [report "raw-pump/pump-history-raw.json"]
 hours = 8.0
@@ -177,8 +177,8 @@ extra = ns.ini
 rm-warmup = ! bash -c "rm -f model.json monitor/clock.json > /dev/null"
 warmup = report invoke model.json raw-pump/clock-raw.json monitor/clock.json
 fail-warmup = ! bash -c "echo PREFLIGHT FAIL; exit 1"
-preflight = ! bash -c "(echo PREFLIGHT ) && openaps warmup 2>&1 >/dev/null && grep -q T monitor/clock.json && echo PREFLIGHT OK || openaps fail-warmup"
-monitor-cgm = report invoke monitor/glucoseclean.json  raw-cgm/glucose-raw.json monitor/glucose.json
+preflight = ! bash -c "rm -f monitor/clock.json && openaps report invoke monitor/clock.json 2>/dev/null && grep -q T monitor/clock.json && echo PREFLIGHT OK || (mm-stick warmup || sudo oref0-reset-usb; echo PREFLIGHT FAIL; sleep 120; exit 1)"
+monitor-cgm = report invoke monitor/glucose.json monitor/glucoseclean.json
 monitor-pump-history = report invoke raw-pump/pump-history-raw.json monitor/pumphistory.json
 get-basal-status = report invoke monitor/temp-basal-status.json
 get-pump-details = report invoke monitor/reservoir.json monitor/status.json monitor/battery.json
@@ -192,10 +192,10 @@ ping = ! bash -c "echo PONG! $*" --
 pong = ! echo PONG
 hello = ! echo hello
 okbar = ! bash -c "echo $1" --
-report-nightscout = report invoke nightscout/preflight.json nightscout/recent-treatments.json nightscout/uploaded.json nightscout/recent-missing-entries.json nightscout/uploaded-entries.json
+report-nightscout = report invoke monitor/clock-zoned.json nightscout/preflight.json monitor/glucoseclean.json nightscout/uploaded.json  nightscout/uploaded-entries.json
 gather = ! bash -c "rm -f monitor/*; openaps get-profile && openaps monitor-cgm && openaps monitor-pump && openaps report invoke monitor/iob.json"
 get-profile = report invoke settings/settings.json settings/bg_targets_raw.json settings/bg-targets.json settings/insulin-sensitivities-raw.json settings/insulin-sensitivities.json settings/basal-profile.json settings/profile.json
-monitor-pump = report invoke monitor/clock.json monitor/temp_basal.json monitor/pumphistory.json monitor/iob.json
+monitor-pump = report invoke monitor/clock.json monitor/temp_basal.json monitor/pump-history.json monitor/iob.json
 loop = ! bash -c "( openaps preflight && openaps gather && openaps enact) || echo LOOP FAILED."
 determine-basal = report invoke enact/suggested.json
 enact = report invoke enact/suggested.json enact/enacted.json
@@ -207,7 +207,7 @@ use = shell
 reporter = JSON
 json_default = True
 device = ns
-remainder = monitor/pump-history.json model.json
+remainder = monitor/pumphistory.json model.json
 
 [report "nightscout/uploaded.json"]
 oper = upload-non-empty-treatments
@@ -223,7 +223,7 @@ use = shell
 reporter = JSON
 json_default = True
 device = ns
-remainder = tz  entries monitor/glucose.json 
+remainder = tz  monitor/glucose.json
 
 [report "nightscout/uploaded-entries.json"]
 oper = upload
@@ -381,4 +381,6 @@ device = insulin_pump
 input = enact/suggested.json
 use = set_temp_basal
 reporter = JSON
+
+
 
