--- a/openaps.ini
+++ b/openaps.ini
@@ -195,7 +195,7 @@ okbar = ! bash -c "echo $1" --
 report-nightscout = report invoke monitor/clock-zoned.json nightscout/preflight.json monitor/glucoseclean.json nightscout/uploaded.json  nightscout/uploaded-entries.json
 gather = ! bash -c "rm -f monitor/*; openaps get-profile && openaps monitor-cgm && openaps monitor-pump && openaps report invoke monitor/iob.json"
 get-profile = report invoke settings/settings.json settings/bg_targets_raw.json settings/bg-targets.json settings/insulin-sensitivities-raw.json settings/insulin-sensitivities.json settings/basal-profile.json settings/profile.json
-monitor-pump = report invoke monitor/clock.json monitor/temp_basal.json monitor/pump-history.json monitor/iob.json
+monitor-pump = report invoke monitor/clock.json monitor/temp_basal.json monitor/pumphistory.json monitor/iob.json
 loop = ! bash -c "( openaps preflight && openaps gather && openaps enact) || echo LOOP FAILED."
 determine-basal = report invoke enact/suggested.json
 enact = report invoke enact/suggested.json enact/enacted.json
