openaps-report invoke monitor/clock.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report invoke monitor/clock.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -207,7 +207,7 @@ use = shell
 reporter = JSON
 json_default = True
 device = ns
-remainder = monitor/pumphistory.json model.json
+remainder = monitor/pumphistory.json monitor/glucoseclean.json model.json
 
 [report "nightscout/uploaded.json"]
 oper = upload-non-empty-treatments
