openaps-report show --cli nightscout/recent-missing-entries.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report show --cli nightscout/recent-missing-entries.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -223,7 +223,7 @@ use = shell
 reporter = JSON
 json_default = True
 device = ns
-remainder = tz  monitor/glucose.json
+remainder = tz  entries monitor/glucose.json
 
 [report "nightscout/uploaded-entries.json"]
 oper = upload
