--- a/openaps.ini
+++ b/openaps.ini
@@ -382,5 +382,7 @@ input = enact/suggested.json
 use = set_temp_basal
 reporter = JSON
 
-
+[device "mm-glucose-format"]
+vendor = openaps.vendors.process
+extra = mm-glucose-format.ini
 
