openaps-report add raw-pump/mm-glucose.json JSON insulin_pump iter_glucose 5
      TODO: better change descriptions
      /usr/local/bin/openaps-report add raw-pump/mm-glucose.json JSON insulin_pump iter_glucose 5

--- a/openaps.ini
+++ b/openaps.ini
@@ -386,3 +386,9 @@ reporter = JSON
 vendor = openaps.vendors.process
 extra = mm-glucose-format.ini
 
+[report "raw-pump/mm-glucose.json"]
+device = insulin_pump
+count = 5
+use = iter_glucose
+reporter = JSON
+
