openaps-report add raw-pump/ns-glucose.json JSON mm-glucose-format shell raw-pump/mm-glucose.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report add raw-pump/ns-glucose.json JSON mm-glucose-format shell raw-pump/mm-glucose.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -392,3 +392,10 @@ count = 5
 use = iter_glucose
 reporter = JSON
 
+[report "raw-pump/ns-glucose.json"]
+device = mm-glucose-format
+remainder = raw-pump/mm-glucose.json
+use = shell
+json_default = True
+reporter = JSON
+
