openaps-report add monitor/glucose.json JSON tz rezone --astimezone --date dateString raw-pump/ns-glucose.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report add monitor/glucose.json JSON tz rezone --astimezone --date dateString raw-pump/ns-glucose.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -247,10 +247,15 @@ use = model
 reporter = JSON
 
 [report "monitor/glucose.json"]
-device = insulin_pump
+device = tz
 count = 5
-use = iter_glucose
+use = rezone
 reporter = JSON
+astimezone = True
+date = dateString
+adjust = missing
+input = raw-pump/ns-glucose.json
+timezone = 
 
 [device "oref0"]
 vendor = openaps.vendors.process
