openaps-alias add upload-cgm-ns report invoke raw-pump/mm-glucose.json raw-pump/ns-glucose.json monitor/glucose.json nightscout/recent-missing-entries.json nightscout/uploaded-entries.json
      TODO: better change descriptions
      /usr/local/bin/openaps-alias add upload-cgm-ns report invoke raw-pump/mm-glucose.json raw-pump/ns-glucose.json monitor/glucose.json nightscout/recent-missing-entries.json nightscout/uploaded-entries.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -200,6 +200,7 @@ loop = ! bash -c "( openaps preflight && openaps gather && openaps enact) || ech
 determine-basal = report invoke enact/suggested.json
 enact = report invoke enact/suggested.json enact/enacted.json
 retry-loop = ! bash -c "openaps preflight && until( ! mm-stick warmup || openaps loop); do sleep 5; done"
+upload-cgm-ns = report invoke raw-pump/mm-glucose.json raw-pump/ns-glucose.json monitor/glucose.json nightscout/recent-missing-entries.json nightscout/uploaded-entries.json
 
 [report "nightscout/recent-treatments.json"]
 oper = format-recent-history-treatments
