openaps-report invoke enact/suggested.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report invoke enact/suggested.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -200,7 +200,6 @@ loop = ! bash -c "( openaps preflight && openaps gather && openaps enact) || ech
 determine-basal = report invoke enact/suggested.json
 enact = report invoke enact/suggested.json enact/enacted.json
 retry-loop = ! bash -c "openaps preflight && until( ! mm-stick warmup || openaps loop); do sleep 5; done"
-upload-cgm-ns = report invoke raw-pump/mm-glucose.json raw-pump/ns-glucose.json monitor/glucose.json nightscout/recent-missing-entries.json nightscout/uploaded-entries.json
 
 [report "nightscout/recent-treatments.json"]
 oper = format-recent-history-treatments
@@ -346,7 +345,7 @@ json_default = True
 device = determine-basal
 remainder = 
 iob = monitor/iob.json
-glucose = monitor/glucose.json
+glucose = monitor/glucoseclean.json monitor/glucose.json
 oref0-iob = monitor/iob.json
 temp-basal = monitor/temp_basal.json
 oref0-profile = settings/profile.json
