openaps-report invoke monitor/glucose.json monitor/glucoseclean.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report invoke monitor/glucose.json monitor/glucoseclean.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -345,7 +345,7 @@ json_default = True
 device = determine-basal
 remainder = 
 iob = monitor/iob.json
-glucose = monitor/glucoseclean.json monitor/glucose.json
+glucose = raw-pump/ns-glucose.json
 oref0-iob = monitor/iob.json
 temp-basal = monitor/temp_basal.json
 oref0-profile = settings/profile.json
