--- a/openaps.ini
+++ b/openaps.ini
@@ -345,7 +345,7 @@ json_default = True
 device = determine-basal
 remainder = 
 iob = monitor/iob.json
-glucose = raw-pump/ns-glucose.json
+glucose = monitor/glucoseclean.json
 oref0-iob = monitor/iob.json
 temp-basal = monitor/temp_basal.json
 oref0-profile = settings/profile.json
