openaps-report invoke monitor/glucose-zoned.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report invoke monitor/glucose-zoned.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -2,6 +2,16 @@
 path = .
 module = openapscontrib.timezones
 
+[report "monitor/glucose-zoned.json"]
+use = rezone
+reporter = JSON
+astimezone = False
+date = display_time
+adjust = missing
+input = monitor/glucoseclean.json
+device = tz
+timezone = BST
+
 [device "tz"]
 vendor = openapscontrib.timezones
 extra = tz.ini
