openaps-alias add backdate openaps use ns shell get entries/sgv.json count=300 | openaps use tz lsgaps --date dateString --minutes 6 --before yesterday --after now - | openaps use tz select --current now --date dateString --gaps - monitor/glucose.json | openaps use ns shell upload entries.json -
      TODO: better change descriptions
      /usr/local/bin/openaps-alias add backdate openaps use ns shell get entries/sgv.json count=300 | openaps use tz lsgaps --date dateString --minutes 6 --before yesterday --after now - | openaps use tz select --current now --date dateString --gaps - monitor/glucose.json | openaps use ns shell upload entries.json -

--- a/openaps.ini
+++ b/openaps.ini
@@ -210,6 +210,7 @@ loop = ! bash -c "( openaps preflight && openaps gather && openaps enact) || ech
 determine-basal = report invoke enact/suggested.json
 enact = report invoke enact/suggested.json enact/enacted.json
 retry-loop = ! bash -c "openaps preflight && until( ! mm-stick warmup || openaps loop); do sleep 5; done"
+backdate = openaps use ns shell get entries/sgv.json count=300 | openaps use tz lsgaps --date dateString --minutes 6 --before yesterday --after now - | openaps use tz select --current now --date dateString --gaps - monitor/glucose.json | openaps use ns shell upload entries.json -
 
 [report "nightscout/recent-treatments.json"]
 oper = format-recent-history-treatments
