--- a/openaps.ini
+++ b/openaps.ini
@@ -356,7 +356,7 @@ json_default = True
 device = determine-basal
 remainder = 
 iob = monitor/iob.json
-glucose = monitor/glucoseclean.json
+glucose = monitor/glucose-zoned.json
 oref0-iob = monitor/iob.json
 temp-basal = monitor/temp_basal.json
 oref0-profile = settings/profile.json
