openaps-report add raw-pump/pump-history.json JSON insulin_pump iter_pump_hours 4.0
      TODO: better change descriptions
      /usr/local/bin/openaps-report add raw-pump/pump-history.json JSON insulin_pump iter_pump_hours 4.0

--- a/openaps.ini
+++ b/openaps.ini
@@ -415,3 +415,9 @@ use = shell
 json_default = True
 reporter = JSON
 
+[report "raw-pump/pump-history.json"]
+device = insulin_pump
+hours = 4.0
+use = iter_pump_hours
+reporter = JSON
+
