--- a/openaps.ini
+++ b/openaps.ini
@@ -81,17 +81,18 @@ use = iter_pump_hours
 reporter = JSON
 
 [report "monitor/pump-history.json"]
-date = timestamp dateString start_at end_at created_at
-use = iter_pump
+date = created_at end_at start_at dateString timestamp
+use = rezone
 adjust = missing
 reporter = JSON
-device = insulin_pump
-input = raw-pump/pump-history-raw.json
+device = tz
+input = raw-pump/pump-history.json
 astimezone = False
 oper = format_recent_pump_historyopenaps
 json_default = True
 remainder = report add monitor/pump-history.json JSON insulin_pump iter_pump
 count = 100
+timezone = 
 
 [report "model.json"]
 device = insulin_pump
