--- a/openaps.ini
+++ b/openaps.ini
@@ -190,7 +190,7 @@ warmup = report invoke model.json raw-pump/clock-raw.json monitor/clock.json
 fail-warmup = ! bash -c "echo PREFLIGHT FAIL; exit 1"
 preflight = ! bash -c "rm -f monitor/clock.json && openaps report invoke monitor/clock.json 2>/dev/null && grep -q T monitor/clock.json && echo PREFLIGHT OK || (mm-stick warmup || sudo oref0-reset-usb; echo PREFLIGHT FAIL; sleep 120; exit 1)"
 monitor-cgm = report invoke monitor/glucose.json monitor/glucoseclean.json
-monitor-pump-history = report invoke raw-pump/pump-history-raw.json monitor/pumphistory.json
+monitor-pump-history = report invoke raw-pump/pump-history.json monitor/pump-history.json
 get-basal-status = report invoke monitor/temp-basal-status.json
 get-pump-details = report invoke monitor/reservoir.json monitor/status.json monitor/battery.json
 get-settings = report invoke raw-pump/bg-targets-raw.json settings/bg-targets.json raw-pump/insulin-sensitivities-raw.json settings/insulin-sensitivities.json raw-pump/selected-basal-profile.json raw-pump/settings.json settings/selected-basal-profile.json settings/settings.json
