openaps-report add raw-pump/bg-targets.json JSON insulin_pump read_bg_targets
      TODO: better change descriptions
      /usr/local/bin/openaps-report add raw-pump/bg-targets.json JSON insulin_pump read_bg_targets

--- a/openaps.ini
+++ b/openaps.ini
@@ -422,3 +422,8 @@ hours = 4.0
 use = iter_pump_hours
 reporter = JSON
 
+[report "raw-pump/bg-targets.json"]
+device = insulin_pump
+use = read_bg_targets
+reporter = JSON
+
