--- a/openaps.ini
+++ b/openaps.ini
@@ -21,7 +21,7 @@ vendor = openaps.vendors.medtronic
 extra = insulin_pump.ini
 
 [report "raw-pump/bg-targets-raw.json"]
-device = units
+device = insulin_pump
 use = read_bg_targets
 reporter = JSON
 
@@ -29,11 +29,11 @@ reporter = JSON
 device = units
 to = mg/dL
 use = bg_targets
-input = settings/bg_targets_raw.json
+input = raw-pump/bg-targets-raw.json
 reporter = JSON
 
 [report "raw-pump/insulin-sensitivities-raw.json"]
-device = units
+device = insulin_pump
 use = read_insulin_sensitivities
 reporter = JSON
 
@@ -41,7 +41,7 @@ reporter = JSON
 device = units
 to = mg/dL
 use = insulin_sensitivities
-input = settings/insulin-sensitivities-raw.json
+input = raw-pump/insulin-sensitivities-raw.json
 reporter = JSON
 
 [report "raw-pump/clock-raw.json"]
@@ -51,10 +51,10 @@ reporter = JSON
 
 [report "monitor/clock.json"]
 date = None
-use = read_clock
+use = clock
 adjust = missing
 reporter = JSON
-device = insulin_pump
+device = tz
 input = raw-pump/clock-raw.json
 astimezone = False
 
@@ -81,12 +81,12 @@ use = iter_pump_hours
 reporter = JSON
 
 [report "monitor/pump-history.json"]
-date = created_at end_at start_at dateString timestamp
+date = timestamp dateString start_at end_at created_at
 use = rezone
 adjust = missing
 reporter = JSON
 device = tz
-input = raw-pump/pump-history.json
+input = raw-pump/pump-history-raw.json
 astimezone = False
 oper = format_recent_pump_historyopenaps
 json_default = True
@@ -121,9 +121,9 @@ use = set_temp_basal
 reporter = JSON
 
 [report "settings/settings.json"]
-device = insulin_pump
+device = oref0
 remainder = copy-fresher raw-pump/settings.json
-use = read_settings
+use = shell
 json_default = True
 reporter = JSON
 
@@ -145,7 +145,7 @@ use = read_selected_basal_profile
 reporter = JSON
 
 [report "raw-pump/temp-basal-status.json"]
-device = _insulin_pump
+device = insulin_pump
 use = read_temp_basal
 reporter = JSON
 
