openaps-report add monitor/pump-history.json JSON tz rezone --date created_at --date end_at --date start_at --date dateString --date timestamp raw-pump/pump-history.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report add monitor/pump-history.json JSON tz rezone --date created_at --date end_at --date start_at --date dateString --date timestamp raw-pump/pump-history.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -81,12 +81,12 @@ use = iter_pump_hours
 reporter = JSON
 
 [report "monitor/pump-history.json"]
-date = timestamp dateString start_at end_at created_at
+date = created_at end_at start_at dateString timestamp
 use = rezone
 adjust = missing
 reporter = JSON
 device = tz
-input = raw-pump/pump-history-raw.json
+input = raw-pump/pump-history.json
 astimezone = False
 oper = format_recent_pump_historyopenaps
 json_default = True
