--- a/openaps.ini
+++ b/openaps.ini
@@ -449,3 +449,9 @@ oref0-profile = oref0-monitor/profile.json
 device = calculate-iob
 remainder = 
 
+[report "oref0-monitor/glucose.json"]
+device = glucose
+use = clean
+infile = monitor/glucose.json
+reporter = JSON
+
