openaps-report add oref0-predict/oref0.json JSON determine-basal shell oref0-monitor/iob.json monitor/temp-basal-status.json oref0-monitor/glucose.json oref0-monitor/profile.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report add oref0-predict/oref0.json JSON determine-basal shell oref0-monitor/iob.json monitor/temp-basal-status.json oref0-monitor/glucose.json oref0-monitor/profile.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -67,12 +67,12 @@ reporter = JSON
 use = shell
 oref0-iob = oref0-monitor/iob.json
 temp-basal = monitor/temp-basal-status.json
-reporter = text
+reporter = JSON
 json_default = True
 oref0-profile = oref0-monitor/profile.json
 device = determine-basal
 remainder = 
-glucose = monitor/glucose.json
+glucose = oref0-monitor/glucose.json
 
 [report "raw-pump/pump-history-raw.json"]
 hours = 8.0
