--- a/openaps.ini
+++ b/openaps.ini
@@ -196,7 +196,7 @@ get-pump-details = report invoke monitor/reservoir.json monitor/status.json moni
 get-settings = report invoke raw-pump/bg-targets-raw.json settings/bg-targets.json raw-pump/insulin-sensitivities-raw.json settings/insulin-sensitivities.json raw-pump/selected-basal-profile.json raw-pump/settings.json settings/selected-basal-profile.json settings/settings.json
 gather-pump-data = ! bash -c "openaps get-basal-status; openaps get-pump-details; openaps monitor-pump-history;  openaps get-settings"
 gather-clean-data = ! bash -c "openaps monitor-cgm && openaps gather-pump-data"
-do-oref0 = report invoke oref0-monitor/profile.json oref0-monitor/iob.json oref0-predict/oref0.json
+do-oref0 = report invoke oref0-monitor/glucose.json oref0-monitor/profile.json oref0-monitor/iob.json oref0-predict/oref0.json
 enact-oref0 = report invoke oref0-enacted/enacted-temp-basal.json
 do-everything = ! bash -c "(openaps preflight && openaps gather-clean-data && openaps do-oref0 && openaps enact-oref0);  openaps report-nightscout"
 ping = ! bash -c "echo PONG! $*" --
