openaps-report add raw-pump/cleaned-glucose.json JSON glucose clean raw-pump/mm-glucose.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report add raw-pump/cleaned-glucose.json JSON glucose clean raw-pump/mm-glucose.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -455,3 +455,9 @@ use = clean
 infile = monitor/glucose.json
 reporter = JSON
 
+[report "raw-pump/cleaned-glucose.json"]
+device = glucose
+use = clean
+infile = raw-pump/mm-glucose.json
+reporter = JSON
+
