openaps-report add raw-pump/mm-glucose-cleaned.json JSON glucose clean raw-pump/mm-glucose.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report add raw-pump/mm-glucose-cleaned.json JSON glucose clean raw-pump/mm-glucose.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -461,3 +461,9 @@ use = clean
 infile = raw-pump/mm-glucose.json
 reporter = JSON
 
+[report "raw-pump/mm-glucose-cleaned.json"]
+device = glucose
+use = clean
+infile = raw-pump/mm-glucose.json
+reporter = JSON
+
