openaps-report add oref0-monitor/glucose.json JSON tz rezone --date display_time raw-pump/mm-glucose-cleaned.json
      TODO: better change descriptions
      /usr/local/bin/openaps-report add oref0-monitor/glucose.json JSON tz rezone --date display_time raw-pump/mm-glucose-cleaned.json

--- a/openaps.ini
+++ b/openaps.ini
@@ -450,10 +450,15 @@ device = calculate-iob
 remainder = 
 
 [report "oref0-monitor/glucose.json"]
-device = glucose
-use = clean
+device = tz
+use = rezone
 infile = monitor/glucose.json
 reporter = JSON
+astimezone = False
+date = display_time
+adjust = missing
+input = raw-pump/mm-glucose-cleaned.json
+timezone = 
 
 [report "raw-pump/cleaned-glucose.json"]
 device = glucose
