--- a/openaps.ini
+++ b/openaps.ini
@@ -219,7 +219,7 @@ use = shell
 reporter = JSON
 json_default = True
 device = ns
-remainder = monitor/pumphistory.json monitor/glucoseclean.json model.json
+remainder = monitor/pump-history.json model.json
 
 [report "nightscout/uploaded.json"]
 oper = upload-non-empty-treatments
