--- a/openaps.ini
+++ b/openaps.ini
@@ -203,7 +203,7 @@ ping = ! bash -c "echo PONG! $*" --
 pong = ! echo PONG
 hello = ! echo hello
 okbar = ! bash -c "echo $1" --
-report-nightscout = report invoke monitor/clock-zoned.json nightscout/preflight.json nightscout/uploaded.json nightscout/recent-missing-entries.json nightscout/uploaded-entries.json
+report-nightscout = report invoke monitor/clock-zoned.json nightscout/preflight.json nightscout/recent-treatments.json nightscout/uploaded.json nightscout/recent-missing-entries.json nightscout/uploaded-entries.json
 gather = ! bash -c "ls -f monitor/*; openaps get-profile && openaps monitor-cgm && openaps monitor-pump && openaps report invoke monitor/iob.json"
 get-profile = report invoke settings/settings.json settings/bg_targets_raw.json settings/bg-targets.json settings/insulin-sensitivities-raw.json settings/insulin-sensitivities.json settings/basal-profile.json settings/profile.json
 monitor-pump = report invoke monitor/clock.json monitor/temp_basal.json monitor/pumphistory.json monitor/iob.json
